--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,7 @@
 [submodule "rxtools/source/lib/jsmn"]
 	path = rxtools/source/lib/jsmn
 	url = https://github.com/zserge/jsmn
+[submodule "rxtools/mbedtls"]
+	path = rxtools/mbedtls
+	url = https://github.com/ARMmbed/mbedtls
+	branch = master
