NAND, Partition and File copy refactored Removed PolarSSL notice from readme.md Removed nandtools with obsolete file dump/inject ES partial translation by Sinon Free space check on FAT write jobs

--- a/rxtools/Makefile
+++ b/rxtools/Makefile
@@ -39,16 +39,16 @@ CFLAGS := -g -Os -std=c99 $(CWARNING) $(CFORCE) $(CMACHINE) $(CPPFLAGS) -DVERSIO
 # Use Thumb libraries because sbrk of ARM newlib in devkitPro doesn't work.
 LDFLAGS := -nostartfiles -g $(CMACHINE) -mthumb -mthumb-interwork -Wl,-Tstub.ld
 
-CCOBJS := $(addprefix $(BUILD)/,main.o features/CTRDecryptor.o	\
-	features/NandDumper.o features/TitleKeyDecrypt.o	\
-	features/configuration.o features/downgradeapp.o	\
+CCOBJS := $(addprefix $(BUILD)/,main.o features/CTRDecryptor.o \
+	features/NandDumper.o features/TitleKeyDecrypt.o \
+	features/configuration.o features/downgradeapp.o \
 	features/AdvancedFileManager.o features/firm.o	\
-	features/nandtools.o features/padgen.o features/screenshot.o	\
-	lib/fatfs/diskio.o lib/fatfs/ff.o lib/fatfs/option/unicode.o	\
-	lib/tmio/tmio.o	\
-	lib/console.o lib/crypto.o lib/draw.o lib/fs.o lib/hid.o lib/lang.o	\
-	lib/log.o lib/i2c.o lib/jsmn/jsmn.o lib/menu.o lib/nand.o lib/ncch.o	\
-	features/reboot.o lib/json.o lib/theme.o lib/tmd.o lib/progress.o lib/cfnt.o	\
+	features/padgen.o features/screenshot.o	\
+	lib/fatfs/diskio.o lib/fatfs/ff.o lib/fatfs/option/unicode.o \
+	lib/tmio/tmio.o \
+	lib/console.o lib/crypto.o lib/draw.o lib/fs.o lib/hid.o lib/lang.o \
+	lib/log.o lib/i2c.o lib/jsmn/jsmn.o lib/menu.o lib/nand.o lib/ncch.o \
+	features/reboot.o lib/json.o lib/theme.o lib/tmd.o lib/progress.o lib/cfnt.o \
 	lib/timer.o lib/aes.o lib/sha.o)
 
 OBJS	:= $(CCOBJS) $(addprefix $(BUILD)/, start.o lib/delay.o)
