--- a/.gitmodules
+++ b/.gitmodules
@@ -29,3 +29,6 @@
 	path = rxtools/mbedtls
 	url = https://github.com/ARMmbed/mbedtls
 	branch = master
+[submodule "rxtools/source/lib/patch3ds"]
+	path = rxtools/source/lib/patch3ds
+	url = https://github.com/dukesrg/patch3ds
